--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
+    "element-ui": "^2.13.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-axios": "^2.1.5",
+    "vue-cookie": "^1.1.4",
+    "vue-lazyload": "^1.3.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
