--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-axios": "^2.1.5",
     "vue-cookie": "^1.1.4",
     "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.3.4",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
